--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,15 @@ footer {
   font-size: 0.9em;
   color: #888;
 }
+.semester {
+  margin-bottom: 10px;
+}
+
+.semester h3 {
+  font-size: 1em;
+  text-align: left;
+  margin-bottom: 5px;
+  color: #2980b9;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 2px;
+}
